добавил обновление аватара
